--- a/Service.html
+++ b/Service.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Service - BBY</title>
+  <title>Home - BBY</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:wght@700;800;900&display=swap" rel="stylesheet">
@@ -23,6 +23,7 @@
       <button class="GFG" type="button" onclick=" window.open('https://youtube.com/channel/UCR7g7wCgkRFRQsu-A7lv3Hg/?sub_confirmation=1','_blank')">Subscribe</button>
     </nav>
   </div>
+  <h2 class="srvices">I provide coding services in languages javascript, python, html, and css. I can make programs in python. I can make games in python. I can make websites for you. Depending on the project, I will charge you a fee on how long it will take me. Contact me at the <a href="About.html">About Me</a></h2>
 </body>
 
 </html>
