--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button class="GFG" type="button" onclick=" window.open('https://youtube.com/channel/UCR7g7wCgkRFRQsu-A7lv3Hg/?sub_confirmation=1','_blank')">Subscribe</button>
     </nav>
   </div>
-  <h2 class="intro">Hi! My name is Yunus and I am 13 years old. I am a programmer/coder as well as a gamer. In my free time, I work on projects. My latest project was sort of a "hijacker". It's a python file that scans and attack's wifi networks and steals their wifi password. I do these projects only for educational purposes. You can check out my Services page above if you would like to order something. You can also contact me in the about me. </h2>
+  <h2 class="intro">Hi! My name is Yunus and I am 13 years old. I am a programmer/coder as well as a gamer. In my free time, I work on projects. My latest project was sort of a "hijacker". It's a python file that scans and attack's wifi networks and steals their wifi password. I do these projects only for educational purposes. You can check out my Services page above if you would like to order something. You can also contact me in the <a href="About.html">About Me</a> </h2>
 </body>
 
 </html>
