contact me hyperlink

--- a/Service.html
+++ b/Service.html
@@ -23,7 +23,7 @@
       <button class="GFG" type="button" onclick=" window.open('https://youtube.com/channel/UCR7g7wCgkRFRQsu-A7lv3Hg/?sub_confirmation=1','_blank')">Subscribe</button>
     </nav>
   </div>
-  <h2 class="intro">I provide coding services in languages javascript, python, html, and css. I can make programs in python. I can make games in python. I can make websites for you. Depending on the project, I will charge you a fee on how long it will take me. Contact me at the <a href="About.html">About Me</a></h2>
+  <h2 class="intro">I provide coding services in languages javascript, python, html, and css. I can make programs in python. I can make games in python. I can make websites for you. Depending on the project, I will charge you a fee on how long it will take me. Contact me at the <a href="Contact.html">About Me</a></h2>
 </body>
 
 </html>
