--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:wght@700;800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
   <div class="hero">
     <nav>
+      <a href="#" class="fa fa-youtube"></a>
+      <a href="#" class="fa fa-discord"></a>
       <img src="logo.png" alt="Big Boy Yunus Logo" style="width:150px;height:50px; border-radius: 100px;">
       <ul>
         <li><a href="index.html">Home</a></li>
