--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 <body>
   <div class="hero">
     <nav>
-      <a href="#" class="fa fa-youtube"></a>
-      <a href="#" class="fa fa-discord"></a>
       <img src="logo.png" alt="Big Boy Yunus Logo" style="width:150px;height:50px; border-radius: 100px;">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -24,6 +22,7 @@
         <li><a href="Contact.html">Contact</a></li>
       </ul>
       <button class="GFG" type="button" onclick=" window.open('https://youtube.com/channel/UCR7g7wCgkRFRQsu-A7lv3Hg/?sub_confirmation=1','_blank')">Subscribe</button>
+      <button class="discord" type="button" onclick=" window.open('', '_blank')"><img src="discord-logo.png" alt="discord" style="width:150px; height:150px; border-radius:100px;"></img></button>
     </nav>
   </div>
   <h2 class="intro">Hi! My name is Yunus and I am 13 years old. I am a programmer/coder as well as a gamer. In my free time, I work on projects. My latest project was sort of a "hijacker". It's a python file that scans and attack's wifi networks and steals their wifi password. I do these projects only for educational purposes. You can check out my Services page above if you would like to order something. You can also contact me in the <a href="Contact.html">Contact Page</a> </h2>
