--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="Contact.html">Contact</a></li>
       </ul>
       <button class="GFG" type="button" onclick=" window.open('https://youtube.com/channel/UCR7g7wCgkRFRQsu-A7lv3Hg/?sub_confirmation=1','_blank')">Subscribe</button>
-      <button class="discord" type="button" onclick=" window.open('', '_blank')"><img src="discord-logo.png" alt="discord" style="width:50px; height:50px; border-radius:100px;"></img></button>
+      <button class="discord" type="button" onclick=" window.open('https://discord.gg/4hk8jYzQnJ', '_blank')"><img src="discord-logo.png" alt="discord" style="width:50px; height:50px; border-radius:100px;"></img></button>
     </nav>
   </div>
   <h2 class="intro">Hi! My name is Yunus and I am 13 years old. I am a programmer/coder as well as a gamer. In my free time, I work on projects. My latest project was sort of a "hijacker". It's a python file that scans and attack's wifi networks and steals their wifi password. I do these projects only for educational purposes. You can check out my Services page above if you would like to order something. You can also contact me in the <a href="Contact.html">Contact Page</a> </h2>
