--- a/Contact.html
+++ b/Contact.html
@@ -5,12 +5,24 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Contact - BBY</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style-contact.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:wght@700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <div class="icons">
+    <a class="social-icon-youtube" href="https://www.youtube.com/@sunuy19" target="_blank">
+    <ion-icon class="icon" name="logo-youtube"></ion-icon>
+    </a>
+    <a class="social-icon-discord" href="https://discord.gg/4hk8jYzQnJ" target="_blank">
+      <ion-icon class="icon" name="logo-discord"></ion-icon>
+    </a>
+  </a>
+  </div>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  
   <div class="hero">
     <nav>
       <img src="logo.png" alt="Big Boy Yunus Logo" style="width:150px;height:50px; border-radius: 100px;">
@@ -20,9 +32,9 @@
         <li><a href="Service.html">Service</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
-      <button class="GFG" type="button" onclick=" window.open('https://youtube.com/channel/UCR7g7wCgkRFRQsu-A7lv3Hg/?sub_confirmation=1','_blank')">Subscribe</button>
     </nav>
   </div>
+
 </body>
 
 </html>
