--- a/Contact.html
+++ b/Contact.html
@@ -13,10 +13,10 @@
 <body>
   <div class="icons">
     <a class="social-icon-youtube" href="https://www.youtube.com/@sunuy19" target="_blank">
-    <ion-icon class="icon" name="logo-youtube"></ion-icon>
+    <ion-icon class="icon-yt" name="logo-youtube"></ion-icon>
     </a>
     <a class="social-icon-discord" href="https://discord.gg/4hk8jYzQnJ" target="_blank">
-      <ion-icon class="icon" name="logo-discord"></ion-icon>
+      <ion-icon class="icon-dk" name="logo-discord"></ion-icon>
     </a>
   </a>
   </div>
