--- a/Contact.html
+++ b/Contact.html
@@ -34,6 +34,18 @@
       </ul>
     </nav>
   </div>
+  
+  <div class="container">
+    <h1 class="contact-form">Contact Form</h1>
+    <form action="https://formsubmit.co/nuunuu1923@gmail.com" method="POST">
+      <input type="text" name="Name" placeholder="Full Name" required>
+      <input type="email" name="Email" placeholder="Email" required>
+      <textarea name="Message" placeholder="Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </div>
+  
+   
 
 </body>
 
